# eventorder-backend

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_eventorder_published_date_and_more.py
project/: settings.py
